# template-python

./: .gitignore  README.md  pyproject.toml  renovate.json  requirements-dev.txt
.github/workflows/: ci.yml  dependency-review.yml
src/: __init__.py
tests/: test_placeholder.py
